<resources>
    <string name="app_name">Deliver Tracking</string>
    <string name="todo">TODO</string>
    <string name="mailbag_delivery">Mailbag Delivery</string>
    <string name="barcode">Barcode</string>
    <string name="deliver_status">Deliver Status</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="remark">Remark</string>
    <string name="result">Result</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="scan">Scan</string>
    <string name="submit">submit</string>
    <string name="location">location</string>
    <string name="mailbag_collection">Mailbag Collection</string>
    <string name="collection_status">Collection Status</string>
    <string name="mailbag_delivery_home">Mailbag\nDelivery</string>
    <string name="mailbag_delivery_bulk_home">Mailbag\nDelivery\n(Bulk)</string>
    <string name="mailbag_collection_home">Mailbag\nCollection</string>
    <string name="mailbag_collection_bulk_home">Mailbag\nCollection\n(Bulk)</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="package_list">Package List</string>
    <string name="mailbag_collection_bulk">Mailbag Collection Bulk</string>
    <string name="mailbag_deliver_bulk">Mailbag Deliver Bulk</string>
</resources>