<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailbagCollection">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="678dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/mailbagDeliverForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/screen_background"
            android:elevation="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/mailbag_collection"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/barcode"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/barcodeResult"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="17dp"
                    android:hint="@string/result"
                    android:textColor="@color/black"
                    android:background="@drawable/textview_background"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/scan_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="17dp"
                    android:layout_toEndOf="@+id/barcodeResult"
                    android:text="@string/scan"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background"
                    android:textSize="17sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/collection_status"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/spinner_background"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_address"
                android:background="@drawable/edit_view_background"
                android:inputType="text"
                android:paddingStart="23dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/city"
                android:background="@drawable/textview_background"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/location"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />
            <TextView
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/longitude"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:visibility="gone"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/latitude"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:visibility="gone"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateTxt"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="serif"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="17dp"
                    android:layout_toEndOf="@+id/dateTxt"
                    android:fontFamily="serif"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="17dp"
                    android:hint="@string/date"
                    android:textColor="@color/black"
                    android:background="@drawable/textview_background"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="130dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="17dp"
                    android:layout_toEndOf="@+id/date"
                    android:hint="@string/time"
                    android:background="@drawable/textview_background"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/remark"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/remark"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:autofillHints=""
                android:hint="@string/enter_comment"
                android:background="@drawable/edit_view_background"
                android:inputType="textMultiLine"
                android:paddingStart="23dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:enabled="false"
                android:background="@drawable/button_background"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>